--- a/style.css
+++ b/style.css
@@ -14,10 +14,12 @@
   }
 
   .card:hover {
-    box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.3); /* Přidáme stínový efekt po najetí myší */
-  }
+    box-shadow: 0 4px 8px rgba(0, 0, 255, 0.5);
+}
 
   .card-img-top {
     max-height: 100%; /* Nastavíme maximální výšku obrázku na 100% výšky karty */
     object-fit: cover; /* Zajistí, že obrázek vyplní celý prostor bez deformace */
   }
+
+  
